--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Interphase by TEMPLATED</title>
+		<title>Snapu2b</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,23 +27,16 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Interphase</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-				</nav>
+				<h1><a href="index.html">SnapU2B</a></h1>
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>This is Interphase</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<h2>This is SnapU2B</h2>
+				<p>Get the Best Video & Music</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">Learn More</a>
+						<a href="https://github.com/wiergauthier/snap_apk/releases/download/1/SnapTube_SnapTube_snaptube_v6.02.0.6023743.apk" class="button big">Download</a>
 					</li>
 				</ul>
 			</section>
@@ -52,8 +45,8 @@
 			<section id="one" class="wrapper style1 align-center">
 				<div class="container">
 					<header>
-						<h2>Consectetur adipisicing elit</h2>
-						<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
+						<h2>HD Video & HQ Music</h2>
+						<p>SnapU2B offers video resolutions in a range of 144p, 720p, 1080p HD, 2k HD, 4K HD and audio formats in MP3 or M4A.</p>
 					</header>
 					<div class="row 200%">
 						<section class="4u 12u$(small)">
